Included more explanation text on tables.jade

--- a/libs/jade/tables.jade
+++ b/libs/jade/tables.jade
@@ -12,46 +12,49 @@ block breadcrumbs
 block content
 	.articleContent.row
 		.span8
+			h2 Basic table
 			.example-box-plain
-				table.full-width
+				table
 					thead
 						tr
-							th(scope="col") th
-							th(scope="col") th
-							th(scope="col") th
+							th(scope="col") Column heading
+							th(scope="col") Column heading
+							th(scope="col") Column heading
 					tbody
 						tr
-							td td
-							td td
-							td td
+							td Table cell
+							td Table cell
+							td Table cell
 						tr
-							td td
-							td td
-							td td
+							td Table cell
+							td Table cell
+							td Table cell
 			pre
 				code.language-html
-					| &lt;table class="full-width"&gt;
+					| &lt;table&gt;
 					| 	&lt;thead&gt;
 					| 		&lt;tr&gt;
-					| 			&lt;th scope="col"&gt;th&lt;/th&gt;
-					| 			&lt;th scope="col"&gt;th&lt;/th&gt;
-					| 			&lt;th scope="col"&gt;th&lt;/th&gt;
+					| 			&lt;th scope="col"&gt;Column heading&lt;/th&gt;
+					| 			&lt;th scope="col"&gt;Column heading&lt;/th&gt;
+					| 			&lt;th scope="col"&gt;Column heading&lt;/th&gt;
 					| 		&lt;/tr&gt;
 					| 	&lt;/thead&gt;
 					| 	&lt;tbody&gt;
 					| 		&lt;tr&gt;
-					| 			&lt;td&gt;td&lt;/td&gt;
-					| 			&lt;td&gt;td&lt;/td&gt;
-					| 			&lt;td&gt;td&lt;/td&gt;
+					| 			&lt;td&gt;Table cell&lt;/td&gt;
+					| 			&lt;td&gt;Table cell&lt;/td&gt;
+					| 			&lt;td&gt;Table cell&lt;/td&gt;
 					| 		&lt;/tr&gt;
 					| 		&lt;tr&gt;
-					| 			&lt;td&gt;td&lt;/td&gt;
-					| 			&lt;td&gt;td&lt;/td&gt;
-					| 			&lt;td&gt;td&lt;/td&gt;
+					| 			&lt;td&gt;Table cell&lt;/td&gt;
+					| 			&lt;td&gt;Table cell&lt;/td&gt;
+					| 			&lt;td&gt;Table cell&lt;/td&gt;
 					| 		&lt;/tr&gt;
 					| 	&lt;/tbody&gt;
 					| &lt;/table&gt;
 
+			h2 Table with values
+			p This table is used for situations where you need a right aligned value, or a total along the bottom. Both of these are achieved by simply adding #[code.code .amount] to a cell, or #[code.code .total] to a row.
 			.example-box-plain
 				table.full-width
 					thead
@@ -84,8 +87,11 @@ block content
 					|	&lt;/tbody&gt;
 					| &lt;/table&gt;
 
+			h2 Collapsible table
+			p Tables can include collapsible rows by simply adding the correct classes, and including a table within the next row.
+			p It's important to include #[code.code colspan=""] in the #[code.code td] of #[code.code .table-collapse], to make sure the collapsible table sits full width.
 			.example-box-plain
-				table.full-width
+				table.full-width(style="table-layout: fixed;")
 					thead
 						tr
 							th(scope="col") th
@@ -95,9 +101,14 @@ block content
 							td td
 							td td
 						tr.table-collapse
+							// colspan is important to make the embedded table full width
 							td(colspan="2")
-								table.full-width
+								// .full-width class is important to make the embedded table full width
+								table.full-width(style="table-layout: fixed;")
 									tbody
+										tr
+											td td
+											td td
 										tr
 											td td
 											td td
@@ -105,9 +116,14 @@ block content
 							td td
 							td td
 						tr.table-collapse
+							// colspan is important to make the embedded table full width
 							td(colspan="2")
-								table.full-width
+								// .full-width class is important to make the embedded table full width
+								table.full-width(style="table-layout: fixed;")
 									tbody
+										tr
+											td td
+											td td
 										tr
 											td td
 											td td
@@ -126,8 +142,14 @@ block content
 					| 			&lt;td&gt;td&lt;/td&gt;
 					| 		&lt;/tr&gt;
 					| 		&lt;tr class="table-collapse"&gt;
+					|			&lt;!-- colspan is important to make the embedded table full width --&gt;
 					| 			&lt;td colspan="2"&gt;
+					|				&lt;!-- .full-width class is important to make the embedded table full width --&gt;
 					|				&lt;table class="full-width"&gt;
+					|					&lt;tr&gt;
+					|						&lt;td&gt;td&lt;/td&gt;
+					|						&lt;td&gt;td&lt;/td&gt;
+					|					&lt;/tr&gt;
 					|					&lt;tr&gt;
 					|						&lt;td&gt;td&lt;/td&gt;
 					|						&lt;td&gt;td&lt;/td&gt;
@@ -140,8 +162,14 @@ block content
 					| 			&lt;td&gt;td&lt;/td&gt;
 					| 		&lt;/tr&gt;
 					| 		&lt;tr class="table-collapse"&gt;
+					|			&lt;!-- colspan is important to make the embedded table full width --&gt;
 					| 			&lt;td colspan="2"&gt;
+					|				&lt;!-- .full-width class is important to make the embedded table full width --&gt;
 					|				&lt;table class="full-width"&gt;
+					|					&lt;tr&gt;
+					|						&lt;td&gt;td&lt;/td&gt;
+					|						&lt;td&gt;td&lt;/td&gt;
+					|					&lt;/tr&gt;
 					|					&lt;tr&gt;
 					|						&lt;td&gt;td&lt;/td&gt;
 					|						&lt;td&gt;td&lt;/td&gt;
