--- a/libs/styleguide/guide.less
+++ b/libs/styleguide/guide.less
@@ -156,11 +156,11 @@ ol li, ul li {
         margin-bottom: 0;
     }
 }
-span.code {
+.code {
     color: #333;
     padding: 5px;
     font-size: @font-size-small;
-    margin: 1em 1em 3em 1em;
+    //margin: 1em 1em 3em 1em;
     font-family: monaco,monospace;
     line-height: 1.7em;
     background-color: #f8f8f8;
