Improved explanations of tables

--- a/libs/jade/tables.jade
+++ b/libs/jade/tables.jade
@@ -88,8 +88,7 @@ block content
 					| &lt;/table&gt;
 
 			h2 Collapsible table
-			p Tables can include collapsible rows by simply adding the correct classes, and including a table within the next row.
-			p It's important to include #[code.code colspan=""] in the #[code.code td] of #[code.code .table-collapse], to make sure the collapsible table sits full width.
+			p Tables can include collapsible rows by simply adding the correct classes and embedding a table within a cell.
 			.example-box-plain
 				table.full-width(style="table-layout: fixed;")
 					thead
