--- a/libs/styleguide/guide.less
+++ b/libs/styleguide/guide.less
@@ -70,6 +70,62 @@ ol li, ul li {
     margin:             0 0 (@paragraph-margin-bottom / 2) 0;
 }
 /***************************************************************************
+* Box links
+* Hopefully a fairly logical name
+* Holders for content, where the entire area links to further content
+* Being tested with ./public/pip-content.html
+*/
+
+.box--links {
+    .callout( @callout-border: @blue-light, @callout-background: @white );
+    .callout--border;
+    //.callout--border--top;
+    margin-top: 1rem;
+    .flex-row {
+        padding: 0;
+    }
+    h2, h3 {
+        color: @heritage-blue;
+        font-weight: @font-weight-bolder;
+        font-size: 1.1rem;
+        margin-bottom: unit(@box-spacing-vertical*1.25*@base-size,px);
+        margin-bottom: @box-spacing-vertical*1.25;
+    }
+    .columns {
+            @media (min-width:@screen-md-min) {
+                column-count: 2;
+        -webkit-column-count: 2;
+           -moz-column-count: 2;
+            -ms-column-count: 2;
+             -o-column-count: 2;
+                column-gap: 1rem;
+        -webkit-column-gap: 1rem;
+           -moz-column-gap: 1rem;
+            -ms-column-gap: 1rem;
+             -o-column-gap: 1rem;
+                columns: 2;
+            }
+        ul, ol {
+            margin: 0;
+            .spacing(padding,0.25rem,1rem);
+            //list-style: none;
+            li {
+                font-size: 0.95rem;
+                .spacing(margin-bottom,1rem);
+                display: inline-block;
+            }
+        }
+    }
+    a {
+        border-width: 0;
+        &:hover {
+            border-bottom: 0px @heritage-blue solid;
+            border-bottom-width: 1px;
+        }
+    }
+}
+
+/***************************************************************************
  * Page status
  * Badge
  */
