small change to content

--- a/libs/jade/pip-dressing.jade
+++ b/libs/jade/pip-dressing.jade
@@ -55,7 +55,7 @@ block content
             h2 Question 8a - tick box 
 
             //.example-box-plain
-            .well--outline
+            .callout--quote
                 label(for="standardfield") Do you use an aid or appliance to dress or undress?
                 <span class="form-hint">Aids or appliances could include shoe horns, modified clothing e.g. front fastening bras, velcro fastenings etc</span>
                 label.radio.radio--inline
@@ -67,18 +67,15 @@ block content
                 label.radio.radio--inline
                     input(name="radio-inline", type="radio", value="option3")
                     | Sometimes
-
-            p If possible, try not to answer “sometimes” because either you do or you don’t use an aid or appliance. If you tick '"sometimes" the DWP might think you can manage more than you can. You can explain when you do and don’t use an aid in the extra information text box for question 8. 
-
-            p If you tick no: do you really not use an aid? You should probably be ticking yes and giving more detail in the extra information if any of the following apply:
-
-            ul
-                li you wear adapted clothing, such as clothes with velcro or clothes with no fastenings
-                li you use an aid some of the time but not always 
+                p If possible, try not to answer “sometimes” because either you do or you don’t use an aid or appliance. If you tick '"sometimes" the DWP might think you can manage more than you can. You can explain when you do and don’t use an aid in the extra information text box for question 8. 
+                p If you tick no: do you really not use an aid? You should probably be ticking yes and giving more detail in the extra information if any of the following apply:
+                ul
+                    li you wear adapted clothing, such as clothes with velcro or clothes with no fastenings
+                    li you use an aid some of the time but not always 
 
             h2 Question 8b - tick box  
 
-            .well--outline
+            .callout--quote
                 label(for="standardfield") Do you need help from another person to dress or undress?
                 label.radio.radio--inline
                     input(checked name="radio-inline", type="radio", value="option1")
@@ -91,7 +88,6 @@ block content
                     | Sometimes
 
                 p Again, try not to answer sometimes.
-
                 p If you tick no: our advice is you should probably be ticking yes if any of the following apply:
                 ul
                     li someone reminds you
