Expanded pie chart to include all 9 colours

--- a/libs/jade/charts.jade
+++ b/libs/jade/charts.jade
@@ -96,16 +96,31 @@ block script
 					colorByPoint: true,
 					data: [{
 						name: 'Source 1',
-						y: 140
+						y: 144
 					}, {
 						name: 'Source 2',
-						y: 50
+						y: 59
 					}, {
 						name: 'Source 3',
 						y: 210
 					}, {
 						name: 'Source 4',
-						y: 95
+						y: 64
+					}, {
+						name: 'Source 5',
+						y: 102
+					}, {
+						name: 'Source 6',
+						y: 88
+					}, {
+						name: 'Source 7',
+						y: 31
+					}, {
+						name: 'Source 8',
+						y: 75
+					}, {
+						name: 'Source 9',
+						y: 163
 					}],
 					dataLabels: {
 						formatter: function () {
@@ -221,16 +236,31 @@ block content
 					|				colorByPoint: true,
 					|				data: [{
 					|					name: 'Source 1',
-					|					y: 140
+					|					y: 144
 					|				}, {
 					|					name: 'Source 2',
-					|					y: 50
+					|					y: 59
 					|				}, {
 					|					name: 'Source 3',
 					|					y: 210
 					|				}, {
 					|					name: 'Source 4',
-					|					y: 95
+					|					y: 64
+					|				}, {
+					|					name: 'Source 5',
+					|					y: 102
+					|				}, {
+					|					name: 'Source 6',
+					|					y: 88
+					|				}, {
+					|					name: 'Source 7',
+					|					y: 31
+					|				}, {
+					|					name: 'Source 8',
+					|					y: 75
+					|				}, {
+					|					name: 'Source 9',
+					|					y: 163
 					|				}],
 					|				dataLabels: {
 					|					formatter: function () {
