--- a/libs/modules/revealable.less
+++ b/libs/modules/revealable.less
@@ -8,9 +8,13 @@
 
 .collapsible, // This needs to be removed eventually
 .revealable {
-    .revealable();
+    .revealable(
+        @white,
+        @heritage-blue,
+        @gray-5
+    );
 
-    &--aqua {
+    /*&--aqua {
         .revealable( 
             @aqua-light,
             @text-color,
@@ -35,7 +39,7 @@
             @text-color,
             @red
         ) 
-    }
+    }*/
 }
 
 
