--- a/public/css/site.css
+++ b/public/css/site.css
@@ -9593,8 +9593,34 @@ html[lang="en-SCT"] .main-nav {
   margin: 0.75rem 0;
   background-color: #FFF;
   color: #191926;
-  border: solid #229cff;
+  border: solid #bfbfbf;
   border-width: 1px 1px 0px 0.5rem;
+  /*&--aqua {
+        .revealable( 
+            @aqua-light,
+            @text-color,
+            @aqua
+        ) 
+    }
+
+    &--green {
+        .revealable( 
+            @green-lighter,
+            @text-color,
+            @green-light
+        ) 
+    }
+    &--green h2 {
+        color: green;
+    } 
+
+    &--red {
+        .revealable( 
+            @red-lighter,
+            @text-color,
+            @red
+        ) 
+    }*/
 }
 .collapsible i.revealable__icon,
 .revealable i.revealable__icon,
@@ -9614,12 +9640,12 @@ html[lang="en-SCT"] .main-nav {
   border: none;
   text-decoration: none;
   position: relative;
-  background-color: #a2d5ff;
-  color: #191926;
+  background-color: #FFF;
+  color: #004B88;
   font-size: 1rem;
   font-weight: 600;
   line-height: 1.5;
-  border-bottom: 1px solid #229cff;
+  border-bottom: 1px solid #bfbfbf;
 }
 .collapsible .collapse-toggle h1,
 .revealable .collapse-toggle h1,
@@ -9646,7 +9672,7 @@ html[lang="en-SCT"] .main-nav {
 .collapsible__heading h6,
 .revealable__heading h6 {
   margin-top: 0;
-  color: #191926;
+  color: #004B88;
 }
 .collapsible .collapse-toggle:after,
 .revealable .collapse-toggle:after,
@@ -9663,6 +9689,7 @@ html[lang="en-SCT"] .main-nav {
   -ms-transform: translateY(-50%);
   transform: translateY(-50%);
   right: 0;
+  color: #737373;
 }
 .collapsible .collapse-toggle *:last-child,
 .revealable .collapse-toggle *:last-child,
@@ -9675,17 +9702,17 @@ html[lang="en-SCT"] .main-nav {
 .collapsible__close,
 .revealable__close {
   display: block;
-  padding: 12px 56px 12px 16px;
-  padding: 0.75rem 3.5rem 0.75rem 1rem;
+  padding: 12px 48px 12px 16px;
+  padding: 0.75rem 3rem 0.75rem 1rem;
   margin: 12px -16px -12px -16px;
   margin: 0.75rem -1rem -0.75rem -1rem;
   text-decoration: none;
   position: relative;
-  color: #191926;
+  color: #004B88;
   cursor: pointer;
   border: none;
   margin-top: 1rem;
-  border-bottom: 1px solid #229cff;
+  border-bottom: 1px solid #bfbfbf;
   text-align: right;
 }
 .collapsible .collapse-toggle-close:before,
@@ -9707,7 +9734,7 @@ html[lang="en-SCT"] .main-nav {
 .revealable .collapse-toggle-close:hover,
 .collapsible__close:hover,
 .revealable__close:hover {
-  background-color: rgba(162, 213, 255, 0.2);
+  color: #004B88;
 }
 .collapsible .open:after,
 .revealable .open:after,
@@ -9750,518 +9777,10 @@ html[lang="en-SCT"] .main-nav {
 .collapsible__content h6,
 .revealable__content h6 {
   margin-top: 0;
-  color: #191926;
+  color: #004B88;
 }
 .collapsible .revealable__content[aria-hidden=true],
 .revealable .revealable__content[aria-hidden=true] {
-  display: none;
-}
-.collapsible--aqua,
-.revealable--aqua {
-  margin: 0.75rem 0;
-  background-color: #FFF;
-  color: #191926;
-  border: solid #81CEC6;
-  border-width: 1px 1px 0px 0.5rem;
-}
-.collapsible--aqua i.revealable__icon,
-.revealable--aqua i.revealable__icon,
-.collapsible--aqua i.icon-chevron-up,
-.revealable--aqua i.icon-chevron-up {
-  display: none;
-}
-.collapsible--aqua .collapse-toggle,
-.revealable--aqua .collapse-toggle,
-.collapsible--aqua__heading,
-.revealable--aqua__heading {
-  cursor: pointer;
-  display: block;
-  padding: 12px 56px 12px 16px;
-  padding: 0.75rem 3.5rem 0.75rem 1rem;
-  margin: 0;
-  border: none;
-  text-decoration: none;
-  position: relative;
-  background-color: #b8e3df;
-  color: #191926;
-  font-size: 1rem;
-  font-weight: 600;
-  line-height: 1.5;
-  border-bottom: 1px solid #81CEC6;
-}
-.collapsible--aqua .collapse-toggle h1,
-.revealable--aqua .collapse-toggle h1,
-.collapsible--aqua__heading h1,
-.revealable--aqua__heading h1,
-.collapsible--aqua .collapse-toggle h2,
-.revealable--aqua .collapse-toggle h2,
-.collapsible--aqua__heading h2,
-.revealable--aqua__heading h2,
-.collapsible--aqua .collapse-toggle h3,
-.revealable--aqua .collapse-toggle h3,
-.collapsible--aqua__heading h3,
-.revealable--aqua__heading h3,
-.collapsible--aqua .collapse-toggle h4,
-.revealable--aqua .collapse-toggle h4,
-.collapsible--aqua__heading h4,
-.revealable--aqua__heading h4,
-.collapsible--aqua .collapse-toggle h5,
-.revealable--aqua .collapse-toggle h5,
-.collapsible--aqua__heading h5,
-.revealable--aqua__heading h5,
-.collapsible--aqua .collapse-toggle h6,
-.revealable--aqua .collapse-toggle h6,
-.collapsible--aqua__heading h6,
-.revealable--aqua__heading h6 {
-  margin-top: 0;
-  color: #191926;
-}
-.collapsible--aqua .collapse-toggle:after,
-.revealable--aqua .collapse-toggle:after,
-.collapsible--aqua__heading:after,
-.revealable--aqua__heading:after {
-  box-sizing: border-box;
-  font-family: 'FontAwesome';
-  content: "\f067";
-  padding: 0px 20px;
-  padding: 0rem 1.25rem;
-  position: absolute;
-  top: 50%;
-  -webkit-transform: translateY(-50%);
-  -ms-transform: translateY(-50%);
-  transform: translateY(-50%);
-  right: 0;
-}
-.collapsible--aqua .collapse-toggle *:last-child,
-.revealable--aqua .collapse-toggle *:last-child,
-.collapsible--aqua__heading *:last-child,
-.revealable--aqua__heading *:last-child {
-  margin-bottom: 0;
-}
-.collapsible--aqua .collapse-toggle-close,
-.revealable--aqua .collapse-toggle-close,
-.collapsible--aqua__close,
-.revealable--aqua__close {
-  display: block;
-  padding: 12px 56px 12px 16px;
-  padding: 0.75rem 3.5rem 0.75rem 1rem;
-  margin: 12px -16px -12px -16px;
-  margin: 0.75rem -1rem -0.75rem -1rem;
-  text-decoration: none;
-  position: relative;
-  color: #191926;
-  cursor: pointer;
-  border: none;
-  margin-top: 1rem;
-  border-bottom: 1px solid #81CEC6;
-  text-align: right;
-}
-.collapsible--aqua .collapse-toggle-close:before,
-.revealable--aqua .collapse-toggle-close:before,
-.collapsible--aqua__close:before,
-.revealable--aqua__close:before {
-  box-sizing: border-box;
-  font-family: 'FontAwesome';
-  padding: 0px 20px;
-  padding: 0rem 1.25rem;
-  height: 100%;
-  position: absolute;
-  right: 0;
-  top: 0;
-  line-height: 3em;
-  content: "\f068";
-}
-.collapsible--aqua .collapse-toggle-close:hover,
-.revealable--aqua .collapse-toggle-close:hover,
-.collapsible--aqua__close:hover,
-.revealable--aqua__close:hover {
-  background-color: rgba(184, 227, 223, 0.2);
-}
-.collapsible--aqua .open:after,
-.revealable--aqua .open:after,
-.collapsible--aqua__heading[aria-expanded=true]:after,
-.revealable--aqua__heading[aria-expanded=true]:after {
-  content: "\f068";
-}
-.collapsible--aqua .collapse-content,
-.revealable--aqua .collapse-content,
-.collapsible--aqua__content,
-.revealable--aqua__content {
-  padding: 0;
-  border: 0;
-  margin: 0;
-  padding: 12px 16px;
-  padding: 0.75rem 1rem;
-}
-.collapsible--aqua .collapse-content h1,
-.revealable--aqua .collapse-content h1,
-.collapsible--aqua__content h1,
-.revealable--aqua__content h1,
-.collapsible--aqua .collapse-content h2,
-.revealable--aqua .collapse-content h2,
-.collapsible--aqua__content h2,
-.revealable--aqua__content h2,
-.collapsible--aqua .collapse-content h3,
-.revealable--aqua .collapse-content h3,
-.collapsible--aqua__content h3,
-.revealable--aqua__content h3,
-.collapsible--aqua .collapse-content h4,
-.revealable--aqua .collapse-content h4,
-.collapsible--aqua__content h4,
-.revealable--aqua__content h4,
-.collapsible--aqua .collapse-content h5,
-.revealable--aqua .collapse-content h5,
-.collapsible--aqua__content h5,
-.revealable--aqua__content h5,
-.collapsible--aqua .collapse-content h6,
-.revealable--aqua .collapse-content h6,
-.collapsible--aqua__content h6,
-.revealable--aqua__content h6 {
-  margin-top: 0;
-  color: #191926;
-}
-.collapsible--aqua .revealable__content[aria-hidden=true],
-.revealable--aqua .revealable__content[aria-hidden=true] {
-  display: none;
-}
-.collapsible--green,
-.revealable--green {
-  margin: 0.75rem 0;
-  background-color: #FFF;
-  color: #191926;
-  border: solid #b9db9b;
-  border-width: 1px 1px 0px 0.5rem;
-}
-.collapsible--green i.revealable__icon,
-.revealable--green i.revealable__icon,
-.collapsible--green i.icon-chevron-up,
-.revealable--green i.icon-chevron-up {
-  display: none;
-}
-.collapsible--green .collapse-toggle,
-.revealable--green .collapse-toggle,
-.collapsible--green__heading,
-.revealable--green__heading {
-  cursor: pointer;
-  display: block;
-  padding: 12px 56px 12px 16px;
-  padding: 0.75rem 3.5rem 0.75rem 1rem;
-  margin: 0;
-  border: none;
-  text-decoration: none;
-  position: relative;
-  background-color: #d3e8c1;
-  color: #191926;
-  font-size: 1rem;
-  font-weight: 600;
-  line-height: 1.5;
-  border-bottom: 1px solid #b9db9b;
-}
-.collapsible--green .collapse-toggle h1,
-.revealable--green .collapse-toggle h1,
-.collapsible--green__heading h1,
-.revealable--green__heading h1,
-.collapsible--green .collapse-toggle h2,
-.revealable--green .collapse-toggle h2,
-.collapsible--green__heading h2,
-.revealable--green__heading h2,
-.collapsible--green .collapse-toggle h3,
-.revealable--green .collapse-toggle h3,
-.collapsible--green__heading h3,
-.revealable--green__heading h3,
-.collapsible--green .collapse-toggle h4,
-.revealable--green .collapse-toggle h4,
-.collapsible--green__heading h4,
-.revealable--green__heading h4,
-.collapsible--green .collapse-toggle h5,
-.revealable--green .collapse-toggle h5,
-.collapsible--green__heading h5,
-.revealable--green__heading h5,
-.collapsible--green .collapse-toggle h6,
-.revealable--green .collapse-toggle h6,
-.collapsible--green__heading h6,
-.revealable--green__heading h6 {
-  margin-top: 0;
-  color: #191926;
-}
-.collapsible--green .collapse-toggle:after,
-.revealable--green .collapse-toggle:after,
-.collapsible--green__heading:after,
-.revealable--green__heading:after {
-  box-sizing: border-box;
-  font-family: 'FontAwesome';
-  content: "\f067";
-  padding: 0px 20px;
-  padding: 0rem 1.25rem;
-  position: absolute;
-  top: 50%;
-  -webkit-transform: translateY(-50%);
-  -ms-transform: translateY(-50%);
-  transform: translateY(-50%);
-  right: 0;
-}
-.collapsible--green .collapse-toggle *:last-child,
-.revealable--green .collapse-toggle *:last-child,
-.collapsible--green__heading *:last-child,
-.revealable--green__heading *:last-child {
-  margin-bottom: 0;
-}
-.collapsible--green .collapse-toggle-close,
-.revealable--green .collapse-toggle-close,
-.collapsible--green__close,
-.revealable--green__close {
-  display: block;
-  padding: 12px 56px 12px 16px;
-  padding: 0.75rem 3.5rem 0.75rem 1rem;
-  margin: 12px -16px -12px -16px;
-  margin: 0.75rem -1rem -0.75rem -1rem;
-  text-decoration: none;
-  position: relative;
-  color: #191926;
-  cursor: pointer;
-  border: none;
-  margin-top: 1rem;
-  border-bottom: 1px solid #b9db9b;
-  text-align: right;
-}
-.collapsible--green .collapse-toggle-close:before,
-.revealable--green .collapse-toggle-close:before,
-.collapsible--green__close:before,
-.revealable--green__close:before {
-  box-sizing: border-box;
-  font-family: 'FontAwesome';
-  padding: 0px 20px;
-  padding: 0rem 1.25rem;
-  height: 100%;
-  position: absolute;
-  right: 0;
-  top: 0;
-  line-height: 3em;
-  content: "\f068";
-}
-.collapsible--green .collapse-toggle-close:hover,
-.revealable--green .collapse-toggle-close:hover,
-.collapsible--green__close:hover,
-.revealable--green__close:hover {
-  background-color: rgba(211, 232, 193, 0.2);
-}
-.collapsible--green .open:after,
-.revealable--green .open:after,
-.collapsible--green__heading[aria-expanded=true]:after,
-.revealable--green__heading[aria-expanded=true]:after {
-  content: "\f068";
-}
-.collapsible--green .collapse-content,
-.revealable--green .collapse-content,
-.collapsible--green__content,
-.revealable--green__content {
-  padding: 0;
-  border: 0;
-  margin: 0;
-  padding: 12px 16px;
-  padding: 0.75rem 1rem;
-}
-.collapsible--green .collapse-content h1,
-.revealable--green .collapse-content h1,
-.collapsible--green__content h1,
-.revealable--green__content h1,
-.collapsible--green .collapse-content h2,
-.revealable--green .collapse-content h2,
-.collapsible--green__content h2,
-.revealable--green__content h2,
-.collapsible--green .collapse-content h3,
-.revealable--green .collapse-content h3,
-.collapsible--green__content h3,
-.revealable--green__content h3,
-.collapsible--green .collapse-content h4,
-.revealable--green .collapse-content h4,
-.collapsible--green__content h4,
-.revealable--green__content h4,
-.collapsible--green .collapse-content h5,
-.revealable--green .collapse-content h5,
-.collapsible--green__content h5,
-.revealable--green__content h5,
-.collapsible--green .collapse-content h6,
-.revealable--green .collapse-content h6,
-.collapsible--green__content h6,
-.revealable--green__content h6 {
-  margin-top: 0;
-  color: #191926;
-}
-.collapsible--green .revealable__content[aria-hidden=true],
-.revealable--green .revealable__content[aria-hidden=true] {
-  display: none;
-}
-.collapsible--green h2,
-.revealable--green h2 {
-  color: green;
-}
-.collapsible--red,
-.revealable--red {
-  margin: 0.75rem 0;
-  background-color: #FFF;
-  color: #191926;
-  border: solid #DF3034;
-  border-width: 1px 1px 0px 0.5rem;
-}
-.collapsible--red i.revealable__icon,
-.revealable--red i.revealable__icon,
-.collapsible--red i.icon-chevron-up,
-.revealable--red i.icon-chevron-up {
-  display: none;
-}
-.collapsible--red .collapse-toggle,
-.revealable--red .collapse-toggle,
-.collapsible--red__heading,
-.revealable--red__heading {
-  cursor: pointer;
-  display: block;
-  padding: 12px 56px 12px 16px;
-  padding: 0.75rem 3.5rem 0.75rem 1rem;
-  margin: 0;
-  border: none;
-  text-decoration: none;
-  position: relative;
-  background-color: #f2acad;
-  color: #191926;
-  font-size: 1rem;
-  font-weight: 600;
-  line-height: 1.5;
-  border-bottom: 1px solid #DF3034;
-}
-.collapsible--red .collapse-toggle h1,
-.revealable--red .collapse-toggle h1,
-.collapsible--red__heading h1,
-.revealable--red__heading h1,
-.collapsible--red .collapse-toggle h2,
-.revealable--red .collapse-toggle h2,
-.collapsible--red__heading h2,
-.revealable--red__heading h2,
-.collapsible--red .collapse-toggle h3,
-.revealable--red .collapse-toggle h3,
-.collapsible--red__heading h3,
-.revealable--red__heading h3,
-.collapsible--red .collapse-toggle h4,
-.revealable--red .collapse-toggle h4,
-.collapsible--red__heading h4,
-.revealable--red__heading h4,
-.collapsible--red .collapse-toggle h5,
-.revealable--red .collapse-toggle h5,
-.collapsible--red__heading h5,
-.revealable--red__heading h5,
-.collapsible--red .collapse-toggle h6,
-.revealable--red .collapse-toggle h6,
-.collapsible--red__heading h6,
-.revealable--red__heading h6 {
-  margin-top: 0;
-  color: #191926;
-}
-.collapsible--red .collapse-toggle:after,
-.revealable--red .collapse-toggle:after,
-.collapsible--red__heading:after,
-.revealable--red__heading:after {
-  box-sizing: border-box;
-  font-family: 'FontAwesome';
-  content: "\f067";
-  padding: 0px 20px;
-  padding: 0rem 1.25rem;
-  position: absolute;
-  top: 50%;
-  -webkit-transform: translateY(-50%);
-  -ms-transform: translateY(-50%);
-  transform: translateY(-50%);
-  right: 0;
-}
-.collapsible--red .collapse-toggle *:last-child,
-.revealable--red .collapse-toggle *:last-child,
-.collapsible--red__heading *:last-child,
-.revealable--red__heading *:last-child {
-  margin-bottom: 0;
-}
-.collapsible--red .collapse-toggle-close,
-.revealable--red .collapse-toggle-close,
-.collapsible--red__close,
-.revealable--red__close {
-  display: block;
-  padding: 12px 56px 12px 16px;
-  padding: 0.75rem 3.5rem 0.75rem 1rem;
-  margin: 12px -16px -12px -16px;
-  margin: 0.75rem -1rem -0.75rem -1rem;
-  text-decoration: none;
-  position: relative;
-  color: #191926;
-  cursor: pointer;
-  border: none;
-  margin-top: 1rem;
-  border-bottom: 1px solid #DF3034;
-  text-align: right;
-}
-.collapsible--red .collapse-toggle-close:before,
-.revealable--red .collapse-toggle-close:before,
-.collapsible--red__close:before,
-.revealable--red__close:before {
-  box-sizing: border-box;
-  font-family: 'FontAwesome';
-  padding: 0px 20px;
-  padding: 0rem 1.25rem;
-  height: 100%;
-  position: absolute;
-  right: 0;
-  top: 0;
-  line-height: 3em;
-  content: "\f068";
-}
-.collapsible--red .collapse-toggle-close:hover,
-.revealable--red .collapse-toggle-close:hover,
-.collapsible--red__close:hover,
-.revealable--red__close:hover {
-  background-color: rgba(242, 172, 173, 0.2);
-}
-.collapsible--red .open:after,
-.revealable--red .open:after,
-.collapsible--red__heading[aria-expanded=true]:after,
-.revealable--red__heading[aria-expanded=true]:after {
-  content: "\f068";
-}
-.collapsible--red .collapse-content,
-.revealable--red .collapse-content,
-.collapsible--red__content,
-.revealable--red__content {
-  padding: 0;
-  border: 0;
-  margin: 0;
-  padding: 12px 16px;
-  padding: 0.75rem 1rem;
-}
-.collapsible--red .collapse-content h1,
-.revealable--red .collapse-content h1,
-.collapsible--red__content h1,
-.revealable--red__content h1,
-.collapsible--red .collapse-content h2,
-.revealable--red .collapse-content h2,
-.collapsible--red__content h2,
-.revealable--red__content h2,
-.collapsible--red .collapse-content h3,
-.revealable--red .collapse-content h3,
-.collapsible--red__content h3,
-.revealable--red__content h3,
-.collapsible--red .collapse-content h4,
-.revealable--red .collapse-content h4,
-.collapsible--red__content h4,
-.revealable--red__content h4,
-.collapsible--red .collapse-content h5,
-.revealable--red .collapse-content h5,
-.collapsible--red__content h5,
-.revealable--red__content h5,
-.collapsible--red .collapse-content h6,
-.revealable--red .collapse-content h6,
-.collapsible--red__content h6,
-.revealable--red__content h6 {
-  margin-top: 0;
-  color: #191926;
-}
-.collapsible--red .revealable__content[aria-hidden=true],
-.revealable--red .revealable__content[aria-hidden=true] {
   display: none;
 }
 .accordion .group {
