Fixed small bug on colours.jade

--- a/libs/jade/colours.jade
+++ b/libs/jade/colours.jade
@@ -30,7 +30,7 @@ block content
 						br
 						| @heritage-yellow
 						br
-						#FCBB69
+						| #FCBB69
 				.span3.swatch.swatch--brand--responsible-purple
 					p Responsible Purple
 						br
