--- a/libs/modules/revealable.less
+++ b/libs/modules/revealable.less
@@ -10,8 +10,9 @@
 .revealable {
     .revealable(
         @white,
-        @heritage-blue,
+        @gray-5,
         @gray-5
+        @heritage-blue-light;
     );
 
     /*&--aqua {
