--- a/libs/mixins/revealable.less
+++ b/libs/mixins/revealable.less
@@ -8,7 +8,7 @@
         @revealable-background: @heritage-blue-lighter;
         @revealable-heading: @heritage-blue;
         @revealable-border: @heritage-blue;
-        @revealable-icon: @heritage-blue-light;
+        @revealable-icon: @blue;
     ) {
 
     margin: @box-spacing-vertical 0;
