--- a/public/css/site.css
+++ b/public/css/site.css
@@ -9689,7 +9689,7 @@ html[lang="en-SCT"] .main-nav {
   -ms-transform: translateY(-50%);
   transform: translateY(-50%);
   right: 0;
-  color: #229cff;
+  color: #003C64;
 }
 .collapsible .collapse-toggle *:last-child,
 .revealable .collapse-toggle *:last-child,
