Amend to breadcrumb and link to navigation on long-form

--- a/libs/base/icons.less
+++ b/libs/base/icons.less
@@ -91,7 +91,7 @@
 }
 
 .back-to-top-icon {
-    .btn-icon("\f077", left, @heritage-blue-light);
+    .btn-icon("\f077", left, @blue-light);
     margin-left: -@box-spacing;
 }
 
