--- a/libs/jade/pip-contents.jade
+++ b/libs/jade/pip-contents.jade
@@ -10,8 +10,11 @@ extends ../template/template.jade
 block breadcrumbs
     +breadcrumbs([
         {title: "Home", href: "index.html"}, 
-        {title: "Templates", href: "index.html#templates"},
-        {title: "Content"}])
+        {title: "Benefits", href: "#"},
+        {title: "Sick or disabled people and carers", href: "#"},
+        {title: "PIP", href: "pip-index.html"},
+        {title: "Help filling in your PIP2 form"}
+        ])
 
 block sidebar
     - var section = "Help with your PIP claim"
