--- a/libs/jade/pip-index.jade
+++ b/libs/jade/pip-index.jade
@@ -7,8 +7,9 @@ extends ../template/template.jade
 
 block breadcrumbs
 	+breadcrumbs([
-		{title: "Home", href: "#"}, 
-		{title: "Benefits", href: "#"},
+        {title: "Home", href: "index.html"}, 
+        {title: "Benefits", href: "#"},
+        {title: "Sick or disabled people and carers", href: "#"},
 		{title: "PIP"}])
 
 
