--- a/public/css/site.css
+++ b/public/css/site.css
@@ -5258,7 +5258,7 @@ input.custom-dropdown__button {
   font-family: 'Helvetica', 'FontAwesome';
   font-weight: 300;
   content: "\f077";
-  color: #229cff;
+  color: #A5BDDC;
   text-align: center;
   position: absolute;
   top: 50%;
