--- a/libs/jade/charts.jade
+++ b/libs/jade/charts.jade
@@ -1,5 +1,6 @@
 block settings
 	- var title = "Charts"
+	- var sidebar = true
 
 extends ../template/template.jade
 
@@ -8,6 +9,20 @@ block breadcrumbs
 		{title: "Home", href: "index.html"},
 		{title: "Modules", href: "index.html#modules"}, 
 		{title: "Charts"}])
+
+block sidebar
+	- var section = "Modules"
+	+sidebar([
+		{href: "callout.html", title: "Callout"},
+		{href: "collapse.html", title: "Collapse"},
+		{href: "charts.html", title: "Charts"},
+		{href: "section-notice.html", title: "Section Notices"},
+		{href: "toolbar.html", title: "Content toolbar"},
+		{href: "cookie-monster.html", title: "Cookie Monster"},
+		{href: "extent.html", title: "Extent Switcher"},
+		{href: "overlay.html", title: "Modal/Overlay"},
+		{href: "reference.html", title: "Reference tool"}
+	],2)
 
 block script
 	script(src="../libs/javascript/vendor/highcharts/highcharts.js")
@@ -137,8 +152,8 @@ block script
 		});
 
 block content
-	.articleContent.row
-		.span8
+	.articleContent
+		div
 			p Charts are created using #[a.a-external-link(href="http://www.highcharts.com/", target="_blank") Highcharts], which are very well documented on their website. The examples on this page show colouring and label use.
 
 			h2 Column charts
