--- a/libs/jade/section-notice.jade
+++ b/libs/jade/section-notice.jade
@@ -1,5 +1,6 @@
 block settings
 	- var title = "Section Notices"
+	- var sidebar = true
 
 extends ../template/template.jade
 
@@ -8,6 +9,20 @@ block breadcrumbs
 		{title: "Home", href: "index.html"},
 		{title: "Modules", href: "index.html#modules"}, 
 		{title: "Section Notices"}])
+
+block sidebar
+	- var section = "Modules"
+	+sidebar([
+		{href: "callout.html", title: "Callout"},
+		{href: "collapse.html", title: "Collapse"},
+		{href: "charts.html", title: "Charts"},
+		{href: "section-notice.html", title: "Section Notices"},
+		{href: "toolbar.html", title: "Content toolbar"},
+		{href: "cookie-monster.html", title: "Cookie Monster"},
+		{href: "extent.html", title: "Extent Switcher"},
+		{href: "overlay.html", title: "Modal/Overlay"},
+		{href: "reference.html", title: "Reference tool"}
+	],3)
 
 block section-notice
 	aside.section-notice
@@ -25,8 +40,8 @@ block section-notice
 				| This page is part of #[a(href="#") adviser only] content.
 
 block content
-	.articleContent.row
-		.span8
+	.articleContent
+		div
 			p Section notices appear between the breadcrumbs and page content.
 
 			.example-box-plain
